# sector-radar

./: .gitignore  AGENTS.md  DESIGN.md  PROJECT_CHARTER.md  PROJECT_KIT_INDEX.md  README.md  pyproject.toml
.github/workflows/: ci.yml  deploy-cloudflare.yml
config/: catalysts.manual.example.yaml  thresholds.example.yaml  universe.us_sectors.yaml
docs/: 01_IMPLEMENTATION_PLAN.md  02_MVP_SPEC.md  03_ARCHITECTURE.md  04_DATA_MODEL.md  05_METRICS_AND_STATES.md  06_SECTOR_RULEBOOK.md  07_VALIDATION_PLAN.md  08_UI_SPEC.md  09_API_CONTRACT.md  10_STOCK_ENGINE_EXPANSION.md  11_DEVELOPMENT_WORKFLOW.md  12_AGENT_PROMPTS.md  13_CLOUDFLARE_DEPLOYMENT.md  14_MARKET_DASHBOARD_BENCHMARK.md  15_DATA_SOURCE_EXPANSION.md
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  tsconfig.worker.json  vite.config.ts  wrangler.ingest.jsonc  wrangler.jsonc
frontend/migrations/: 0001_sector_radar_base.sql  0002_data_refresh_status.sql  (+1 more)
skills/: README.md  skill_dashboard_engineer.md  skill_data_engineer.md  skill_documentation_writer.md  skill_project_orchestrator.md  skill_quant_metrics_engineer.md  skill_repo_bootstrap.md  skill_rulebook_engineer.md  skill_stock_engine_researcher.md  skill_validation_engineer.md
templates/: module_spec.template.md  prd.template.md  rule_test_case.template.yaml
tests/: test_clean_architecture_contracts.py  test_config_loader.py  test_local_api.py  test_metrics.py  test_pipeline_snapshot.py  test_price_csv.py  test_refresh_data.py  test_relative_strength.py  test_rulebook.py  test_store.py
(+98 files in other folders)
